mermaid/grammar/generated/MermaidSequenceParser.py
# Generated from C:\Users\pmora\OneDrive\Documents\Git\GitHub\pictosync\mermaid\grammar\MermaidSequenceParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MermaidSequenceParser ( Parser ):

    grammarFileName = "MermaidSequenceParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sequenceDiagram'", "'participant'", 
                     "'actor'", "'boundary'", "'control'", "'entity'", "'database'", 
                     "'collections'", "'queue'", "'right of'", "'left of'", 
                     "'as'", "'box'", "'end'", "'create'", "'destroy'", 
                     "'activate'", "'deactivate'", "<INVALID>", "'over'", 
                     "'loop'", "'alt'", "'else'", "'opt'", "'par'", "'and'", 
                     "'critical'", "'option'", "'break'", "'rect'", "'autonumber'", 
                     "'link'", "'links'", "'transparent'", "<INVALID>", 
                     "':'", "','", "'@'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "SEQUENCE_DIAGRAM", "PARTICIPANT", "ACTOR", 
                      "BOUNDARY", "CONTROL", "ENTITY", "DATABASE", "COLLECTIONS", 
                      "QUEUE", "RIGHT_OF", "LEFT_OF", "AS", "BOX", "END", 
                      "CREATE", "DESTROY", "ACTIVATE", "DEACTIVATE", "NOTE", 
                      "OVER", "LOOP", "ALT", "ELSE", "OPT", "PAR", "AND", 
                      "CRITICAL", "OPTION", "BREAK", "RECT", "AUTONUMBER", 
                      "LINK", "LINKS", "TRANSPARENT", "ARROW", "COLON", 
                      "COMMA", "AT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "INT", "FLOAT", "QUOTED_STRING", "ID", "RGB_COLOR", 
                      "RGBA_COLOR", "COLOR_NAME", "COMMENT", "NEWLINE", 
                      "WS", "LABEL_WS", "LABEL_REST", "TEXT_WS", "TEXT_REST" ]

    RULE_diagram = 0
    RULE_statement = 1
    RULE_participantDecl = 2
    RULE_participantType = 3
    RULE_actorDecl = 4
    RULE_participantId = 5
    RULE_label = 6
    RULE_boxBlock = 7
    RULE_boxColor = 8
    RULE_boxLabel = 9
    RULE_createDirective = 10
    RULE_destroyDirective = 11
    RULE_messageStatement = 12
    RULE_sender = 13
    RULE_receiver = 14
    RULE_messageText = 15
    RULE_activateStatement = 16
    RULE_deactivateStatement = 17
    RULE_noteStatement = 18
    RULE_notePosition = 19
    RULE_noteText = 20
    RULE_loopBlock = 21
    RULE_loopLabel = 22
    RULE_altBlock = 23
    RULE_optBlock = 24
    RULE_altCondition = 25
    RULE_optCondition = 26
    RULE_parBlock = 27
    RULE_parLabel = 28
    RULE_criticalBlock = 29
    RULE_criticalAction = 30
    RULE_optionCondition = 31
    RULE_breakBlock = 32
    RULE_breakCondition = 33
    RULE_rectBlock = 34
    RULE_rectColor = 35
    RULE_autonumberStatement = 36
    RULE_linkStatement = 37
    RULE_linksStatement = 38
    RULE_linkLabel = 39
    RULE_linkUrl = 40
    RULE_jsonObject = 41
    RULE_jsonPair = 42

    ruleNames =  [ "diagram", "statement", "participantDecl", "participantType", 
                   "actorDecl", "participantId", "label", "boxBlock", "boxColor", 
                   "boxLabel", "createDirective", "destroyDirective", "messageStatement", 
                   "sender", "receiver", "messageText", "activateStatement", 
                   "deactivateStatement", "noteStatement", "notePosition", 
                   "noteText", "loopBlock", "loopLabel", "altBlock", "optBlock", 
                   "altCondition", "optCondition", "parBlock", "parLabel", 
                   "criticalBlock", "criticalAction", "optionCondition", 
                   "breakBlock", "breakCondition", "rectBlock", "rectColor", 
                   "autonumberStatement", "linkStatement", "linksStatement", 
                   "linkLabel", "linkUrl", "jsonObject", "jsonPair" ]

    EOF = Token.EOF
    SEQUENCE_DIAGRAM=1
    PARTICIPANT=2
    ACTOR=3
    BOUNDARY=4
    CONTROL=5
    ENTITY=6
    DATABASE=7
    COLLECTIONS=8
    QUEUE=9
    RIGHT_OF=10
    LEFT_OF=11
    AS=12
    BOX=13
    END=14
    CREATE=15
    DESTROY=16
    ACTIVATE=17
    DEACTIVATE=18
    NOTE=19
    OVER=20
    LOOP=21
    ALT=22
    ELSE=23
    OPT=24
    PAR=25
    AND=26
    CRITICAL=27
    OPTION=28
    BREAK=29
    RECT=30
    AUTONUMBER=31
    LINK=32
    LINKS=33
    TRANSPARENT=34
    ARROW=35
    COLON=36
    COMMA=37
    AT=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    INT=43
    FLOAT=44
    QUOTED_STRING=45
    ID=46
    RGB_COLOR=47
    RGBA_COLOR=48
    COLOR_NAME=49
    COMMENT=50
    NEWLINE=51
    WS=52
    LABEL_WS=53
    LABEL_REST=54
    TEXT_WS=55
    TEXT_REST=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEQUENCE_DIAGRAM(self):
            return self.getToken(MermaidSequenceParser.SEQUENCE_DIAGRAM, 0)

        def EOF(self):
            return self.getToken(MermaidSequenceParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidSequenceParser.NEWLINE)
            else:
                return self.getToken(MermaidSequenceParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidSequenceParser.StatementContext)
            else:
                return self.getTypedRuleContext(MermaidSequenceParser.StatementContext,i)


        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_diagram

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = MermaidSequenceParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==51:
                self.state = 86
                self.match(MermaidSequenceParser.NEWLINE)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(MermaidSequenceParser.SEQUENCE_DIAGRAM)
            self.state = 94 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 93
                    self.match(MermaidSequenceParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 96 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3483819427472380) != 0):
                self.state = 98
                self.statement()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(MermaidSequenceParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def participantDecl(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ParticipantDeclContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidSequenceParser.NEWLINE)
            else:
                return self.getToken(MermaidSequenceParser.NEWLINE, i)

        def actorDecl(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ActorDeclContext,0)


        def boxBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.BoxBlockContext,0)


        def createDirective(self):
            return self.getTypedRuleContext(MermaidSequenceParser.CreateDirectiveContext,0)


        def destroyDirective(self):
            return self.getTypedRuleContext(MermaidSequenceParser.DestroyDirectiveContext,0)


        def messageStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.MessageStatementContext,0)


        def activateStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ActivateStatementContext,0)


        def deactivateStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.DeactivateStatementContext,0)


        def noteStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.NoteStatementContext,0)


        def loopBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.LoopBlockContext,0)


        def altBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.AltBlockContext,0)


        def optBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.OptBlockContext,0)


        def parBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ParBlockContext,0)


        def criticalBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.CriticalBlockContext,0)


        def breakBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.BreakBlockContext,0)


        def rectBlock(self):
            return self.getTypedRuleContext(MermaidSequenceParser.RectBlockContext,0)


        def autonumberStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.AutonumberStatementContext,0)


        def linkStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.LinkStatementContext,0)


        def linksStatement(self):
            return self.getTypedRuleContext(MermaidSequenceParser.LinksStatementContext,0)


        def COMMENT(self):
            return self.getToken(MermaidSequenceParser.COMMENT, 0)

        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MermaidSequenceParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.participantDecl()
                self.state = 108 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 107
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 110 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.actorDecl()
                self.state = 114 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 113
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 116 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.boxBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.createDirective()
                self.state = 121 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 120
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 123 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.destroyDirective()
                self.state = 127 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 126
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 129 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.messageStatement()
                self.state = 133 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 132
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 135 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 137
                self.activateStatement()
                self.state = 139 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 138
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 141 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 143
                self.deactivateStatement()
                self.state = 145 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 144
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 147 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 149
                self.noteStatement()
                self.state = 151 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 150
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 153 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 155
                self.loopBlock()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 156
                self.altBlock()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 157
                self.optBlock()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 158
                self.parBlock()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 159
                self.criticalBlock()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 160
                self.breakBlock()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 161
                self.rectBlock()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 162
                self.autonumberStatement()
                self.state = 164 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 163
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 166 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 168
                self.linkStatement()
                self.state = 170 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 169
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 172 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 174
                self.linksStatement()
                self.state = 176 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 175
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 178 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 180
                self.match(MermaidSequenceParser.COMMENT)
                self.state = 182 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 181
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 184 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 187 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 186
                        self.match(MermaidSequenceParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 189 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParticipantDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def participantType(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ParticipantTypeContext,0)


        def participantId(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ParticipantIdContext,0)


        def AS(self):
            return self.getToken(MermaidSequenceParser.AS, 0)

        def label(self):
            return self.getTypedRuleContext(MermaidSequenceParser.LabelContext,0)


        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_participantDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParticipantDecl" ):
                return visitor.visitParticipantDecl(self)
            else:
                return visitor.visitChildren(self)




    def participantDecl(self):

        localctx = MermaidSequenceParser.ParticipantDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_participantDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.participantType()
            self.state = 194
            self.participantId()
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 195
                self.match(MermaidSequenceParser.AS)
                self.state = 196
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParticipantTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARTICIPANT(self):
            return self.getToken(MermaidSequenceParser.PARTICIPANT, 0)

        def ACTOR(self):
            return self.getToken(MermaidSequenceParser.ACTOR, 0)

        def BOUNDARY(self):
            return self.getToken(MermaidSequenceParser.BOUNDARY, 0)

        def CONTROL(self):
            return self.getToken(MermaidSequenceParser.CONTROL, 0)

        def ENTITY(self):
            return self.getToken(MermaidSequenceParser.ENTITY, 0)

        def DATABASE(self):
            return self.getToken(MermaidSequenceParser.DATABASE, 0)

        def COLLECTIONS(self):
            return self.getToken(MermaidSequenceParser.COLLECTIONS, 0)

        def QUEUE(self):
            return self.getToken(MermaidSequenceParser.QUEUE, 0)

        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_participantType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParticipantType" ):
                return visitor.visitParticipantType(self)
            else:
                return visitor.visitChildren(self)




    def participantType(self):

        localctx = MermaidSequenceParser.ParticipantTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_participantType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1020) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTOR(self):
            return self.getToken(MermaidSequenceParser.ACTOR, 0)

        def participantId(self):
            return self.getTypedRuleContext(MermaidSequenceParser.ParticipantIdContext,0)


        def AS(self):
            return self.getToken(MermaidSequenceParser.AS, 0)

        def label(self):
            return self.getTypedRuleContext(MermaidSequenceParser.LabelContext,0)


        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_actorDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActorDecl" ):
                return visitor.visitActorDecl(self)
            else:
                return visitor.visitChildren(self)




    def actorDecl(self):

        localctx = MermaidSequenceParser.ActorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_actorDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(MermaidSequenceParser.ACTOR)
            self.state = 202
            self.participantId()
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 203
                self.match(MermaidSequenceParser.AS)
                self.state = 204
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParticipantIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(MermaidSequenceParser.QUOTED_STRING, 0)

        def ID(self):
            return self.getToken(MermaidSequenceParser.ID, 0)

        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_participantId

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParticipantId" ):
                return visitor.visitParticipantId(self)
            else:
                return visitor.visitChildren(self)




    def participantId(self):

        localctx = MermaidSequenceParser.ParticipantIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_participantId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            _la = self._input.LA(1)
            if not(_la==45 or _la==46):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(MermaidSequenceParser.QUOTED_STRING, 0)

        def LABEL_REST(self):
            return self.getToken(MermaidSequenceParser.LABEL_REST, 0)

        def getRuleIndex(self):
            return MermaidSequenceParser.RULE_label

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):
